# sphinx-asciidoctrine

./: .buildinfo  .gitignore  AGENTS.adoc  README.adoc  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/apidocs/: index.doctree
.doctrees/apidocs/sphinx_asciidoctrine/: sphinx_asciidoctrine.doctree  sphinx_asciidoctrine.parser.doctree
.github/workflows/: ci.yml
_sources/: index.adoc.txt
_sources/apidocs/: index.rst.txt
_sources/apidocs/sphinx_asciidoctrine/: sphinx_asciidoctrine.parser.rst.txt  sphinx_asciidoctrine.rst.txt
apidocs/: index.html
apidocs/sphinx_asciidoctrine/: sphinx_asciidoctrine.html  sphinx_asciidoctrine.parser.html
docs/: conf.py  index.adoc
docs/_static/: custom.css
src/sphinx_asciidoctrine/: __init__.py  parser.py
tests/: conftest.py  test_e2e.py  test_functional.py  test_integration.py  test_unit.py
